# mini-rust-msvc

./: .gitignore  Cargo.toml  README.md  build.bat
